Changed parameter FROM1 to FROM
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2238 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/algebra/tsts/unary/Makefile
+++ b/isis/src/base/apps/algebra/tsts/unary/Makefile
@@ -3,7 +3,7 @@ APPNAME = algebra
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from1=$(INPUT)/isisTruth.cub+1 \
+	$(APPNAME) from=$(INPUT)/isisTruth.cub+1 \
 	  to= $(OUTPUT)/algebraTruth1.cub \
 	  operator=unary \
 	  a=1 \
