--- a/isis/src/base/apps/algebra/tsts/divide/Makefile
+++ b/isis/src/base/apps/algebra/tsts/divide/Makefile
@@ -3,7 +3,7 @@ APPNAME = algebra
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) from1=$(INPUT)/isisTruth.cub+1 \
+	$(APPNAME) from=$(INPUT)/isisTruth.cub+1 \
 	  from2=$(INPUT)/isisTruth.cub+2 \
 	  to=$(OUTPUT)/algebraTruth5.cub \
 	  operator=divide \
