cnetadd.xml: Changed INNET to CNET and OUTNET to ONET for consistency.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2242 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetadd/tsts/default/Makefile
+++ b/isis/src/control/apps/cnetadd/tsts/default/Makefile
@@ -6,13 +6,13 @@ commands:
 	$(LS) $(INPUT)/*M.cub > $(OUTPUT)/add.lis;
 	$(LS) $(INPUT)/*cal.cub > $(OUTPUT)/files.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis \
-	  innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
-	  outnet=$(OUTPUT)/outnet.net log=$(OUTPUT)/outlog.pvl \
+	  cnet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
+	  onet=$(OUTPUT)/outnet.net log=$(OUTPUT)/outlog.pvl \
 	  tolist=$(OUTPUT)/outlist.txt > /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis \
-	  innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
+	  cnet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
 	  extract=modified modifiedpoints=$(OUTPUT)/modified.txt \
-	  outnet=$(OUTPUT)/modifiednet.net log=$(OUTPUT)/modifiedlog.pvl \
+	  onet=$(OUTPUT)/modifiednet.net log=$(OUTPUT)/modifiedlog.pvl \
 	  > /dev/null;
 	$(CAT) $(OUTPUT)/outlist.txt | sed 's#.*/##' > $(OUTPUT)/temp.txt;
 	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/outlist.txt;
