--- a/isis/src/control/apps/cnetadd/tsts/validator/Makefile
+++ b/isis/src/control/apps/cnetadd/tsts/validator/Makefile
@@ -8,8 +8,8 @@ commands:
 	$(LS) $(INPUT)/*M.cub > $(OUTPUT)/add.lis;
 	$(LS) $(INPUT)/*cal.cub > $(OUTPUT)/files.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/files.lis \
-	  innet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
-	  outnet=$(OUTPUT)/outnet.net log=$(OUTPUT)/outlog.pvl \
+	  cnet=$(INPUT)/input.net addlist=$(OUTPUT)/add.lis \
+	  onet=$(OUTPUT)/outnet.net log=$(OUTPUT)/outlog.pvl \
 	  deffile=$(INPUT)/deffile.def > /dev/null;
 	$(RM) $(OUTPUT)/add.lis;
 	$(RM) $(OUTPUT)/files.lis;
