Test was using old param names from another program
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2244 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetsplit/tsts/splitCnet/Makefile
+++ b/isis/src/control/apps/cnetsplit/tsts/splitCnet/Makefile
@@ -7,9 +7,9 @@ commands:
 	  onet_format=$(OUTPUT)/outsplit?? \
 	  num_output_files=2 > /dev/null;
 	  cnetmerge inputtype=cnets \
-	  from1=$(OUTPUT)/outsplit01.net \
-	  from2=$(OUTPUT)/outsplit02.net \
-	  id=autoseed \
+	  cnet=$(OUTPUT)/outsplit01.net \
+	  cnet2=$(OUTPUT)/outsplit02.net \
+	  networkid=autoseed \
 	  description=cnetsplit \
-	  to=$(OUTPUT)/truth.net > /dev/null;
+	  onet=$(OUTPUT)/truth.net > /dev/null;
 	  $(RM) $(OUTPUT)/outsplit*;
