cnetextract.xml: Changed OUTNET to ONET for consistency.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2245 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetextract/tsts/cubes/Makefile
+++ b/isis/src/control/apps/cnetextract/tsts/cubes/Makefile
@@ -5,12 +5,12 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(LS) $(INPUT)/*.cub > $(OUTPUT)/list.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis cnet=$(INPUT)/cnet.net \
-	  tolist=$(OUTPUT)/newList.lis outnet=$(OUTPUT)/newNetPoint.net \
+	  tolist=$(OUTPUT)/newList.lis onet=$(OUTPUT)/newNetPoint.net \
 	  networkid=new description=new prefix=$(OUTPUT)/point \
 	  noignore=true \
 	  cubes=true cubelist=$(OUTPUT)/list.lis > /dev/null;
 	$(APPNAME) fromlist=$(OUTPUT)/list.lis cnet=$(INPUT)/cnet.net \
-	  tolist=$(OUTPUT)/newList.lis outnet=$(OUTPUT)/newNetMeasure.net \
+	  tolist=$(OUTPUT)/newList.lis onet=$(OUTPUT)/newNetMeasure.net \
 	  networkid=new description=new prefix=$(OUTPUT)/measure \
 	  noignore=true \
 	  cubes=true cubelist=$(OUTPUT)/list.lis cubemeasures=true > /dev/null;
