--- a/isis/src/control/apps/cnetextract/tsts/nofromlist/Makefile
+++ b/isis/src/control/apps/cnetextract/tsts/nofromlist/Makefile
@@ -3,6 +3,6 @@ APPNAME = cnetextract
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) cnet=$(INPUT)/cnet.net outnet=$(OUTPUT)/newNet.net \
+	$(APPNAME) cnet=$(INPUT)/cnet.net onet=$(OUTPUT)/newNet.net \
 	networkid=new description=new prefix=$(OUTPUT)/out \
 	noignore=true nomeasureless=true > /dev/null;
