Modified test to compare cube data and cube labels.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2246 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/galileo/apps/gllssical/tsts/default/Makefile
+++ b/isis/src/galileo/apps/gllssical/tsts/default/Makefile
@@ -4,4 +4,6 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) FROM=$(INPUT)/3439R.cub TO=$(OUTPUT)/3439R.cal.cub > /dev/null;
+	catlab FROM=$(OUTPUT)/3439R.cal.cub TO=$(OUTPUT)/3439R.cal.pvl > /dev/null;
 	$(APPNAME) FROM=$(INPUT)/1213r.cub TO=$(OUTPUT)/1213r.cal.cub > /dev/null;
+	catlab FROM=$(OUTPUT)/1213r.cal.cub TO=$(OUTPUT)/1213r.cal.pvl > /dev/null;
