footprintinit.xml: Added the INCTYPE parameter (so it is consistant with caminfo).
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2247 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/footprintinit/tsts/default/Makefile
+++ b/isis/src/base/apps/footprintinit/tsts/default/Makefile
@@ -14,4 +14,15 @@ commands:
 	$(CAT) $(OUTPUT)/ab102401.txt | \
           sed 's/\([0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
           sed -e '$$G' > $(OUTPUT)/ab102401.trimmed.txt
+	rm $(OUTPUT)/ab102401.txt
+	$(APPNAME) from=$(OUTPUT)/ab102401.cub \
+	inctype=vertices numvertices=8 > /dev/null;
+	$$ISISROOT/bin/blobdump \
+	  from=$(OUTPUT)/ab102401.cub \
+	  to=$(OUTPUT)/ab102401.txt \
+	  name=footprint \
+	  type=Polygon > /dev/null;
+	$(CAT) $(OUTPUT)/ab102401.txt | \
+          sed 's/\([0-9]\.[0-9]\{5\}\)\([0-9]*\)/\1/g' | \
+          sed -e '$$G' > $(OUTPUT)/ab102401.vertices.trimmed.txt
 	rm $(OUTPUT)/ab102401.cub $(OUTPUT)/ab102401.txt
