Reactivated GainLineDrift module; updated QETD facters per Patrick email of 2011-04-08
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2269 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hicalbeta/assets/hicalbeta.XXXX.conf
+++ b/isis/src/mro/apps/hicalbeta/assets/hicalbeta.XXXX.conf
@@ -154,12 +154,10 @@ Object = Hical
 
 /* This profile contains parameters pertinent to processing down-line gain correction. */
 /* Required label keywords: CpmmNumber, ChannelNumber, Lines */
+/* This module has been reactivated as of 2010-01-29 */
   Group = Profile
     Name = GainLineDrift
     Module = GainLineDrift
-
-/*  As of 2008-06-25, this is the default */
-    Debug::SkipModule = True
 
     SkipLines            = 1
 /* Added "_hicalbeta" to filename as of 2008-04-02.  This is consistant with */
@@ -234,26 +232,26 @@ Object = Hical
 /* Added CalFact, CCD QE, Temp dependence correction 2010-04-28 */
   Group = Profile
     Name = RED
-    FilterGainCorrection = 157510165.0
+    FilterGainCorrection = 157702564.0
     IoverFbasetemperature = 18.9
     QEpercentincreaseperC = 0.0005704
-    AbsGain_TDI128 = 6.3688
+    AbsGain_TDI128 = 6.376583
   End_Group
 
   Group = Profile
     Name = IR
-    FilterGainCorrection = 56392816.0
+    FilterGainCorrection = 56464791.0
     IoverFbasetemperature = 18.9
     QEpercentincreaseperC = 0.002696
-    AbsGain_TDI128 = 6.9809
+    AbsGain_TDI128 = 6.989840
   End_Group
 
   Group = Profile
     Name = BG
-    FilterGainCorrection = 114682896.0
+    FilterGainCorrection = 115074166.0
     IoverFbasetemperature = 18.9
     QEpercentincreaseperC = 0.00002295
-    AbsGain_TDI128 = 6.9738
+    AbsGain_TDI128 = 6.997557
   End_Group
 
   Group = Profile
