Make app tests platform independant
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2277 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/mro/apps/hicalbeta/tsts/dns/Makefile
+++ b/isis/src/mro/apps/hicalbeta/tsts/dns/Makefile
@@ -8,5 +8,7 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) FROM=$(INPUT)/PSP_001446_1790_RED2_0.cub \
 	TO=$(OUTPUT)/output.cub OPATH=. UNITS=DN > /dev/null;
-	$(MV) PSP_001446_1790_RED2_0.hicalbeta.log \
-	$(OUTPUT)/output.txt;
+	 cat  PSP_001446_1790_RED2_0.hicalbeta.log \
+          | sed 's/\([0-9][0-9]*\.[0-9]\{12\}\)\([0-9][0-9]*\)/\1/g' \
+          > $(OUTPUT)/output.txt;
+	$(RM) PSP_001446_1790_RED2_0.hicalbeta.log 
