updated for binary control net and jigsaw merge
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2282 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/jigsaw/tsts/case01/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/case01/Makefile
@@ -7,17 +7,39 @@ commands:
 	$(LS) -1 $(OUTPUT)/*.cub > $(OUTPUT)/cube.lis;
 	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
 	cnet=$(INPUT)/redPntreg.net \
-	onet=$(OUTPUT)/case01OutNet.bin \
+	onet=$(OUTPUT)/case01OutNet.net \
 	observations=yes \
 	method=sparse \
-	outlier=no \
-	sigma0=1.e-5 \
-	max=50 \
 	solvedegree=3 \
 	camsolve=all \
+	update=yes \
 	twist=no | grep -v "100% Processed" | \
-	grep -v "jigsaw" > $(OUTPUT)/case01OutLog.pvl;
-	cnetbin2pvl from=$(OUTPUT)/case01OutNet.bin to=$(OUTPUT)/case01OutNet.pvl; > /dev/null;
-	$(RM) $(OUTPUT)/cube.lis $(OUTPUT)case01OutNet.bin > /dev/null;
-	cathist from=$(OUTPUT)/PSP_002733_1880_RED4.crop.cub > $(OUTPUT)/PSP4.pvl;										    
+	grep -v "jigsaw" > case01OutLog.txt;
+	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
+	  | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  | sed 's/\/[^,]*\/\([^,\/]*\.net\)/\1/g' \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
+	  > $(OUTPUT)/bundleout.txt
+	# The above command uses sed to do the following (in order):
+	# 1. remove net filename paths
+	# 2. remove cube filename paths
+	# 3. remove digits beyond the fifth decimal place of decimal numbers
+	# 4. remove date and time
+	cat case01OutLog.txt \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  > $(OUTPUT)/case01OutLog.txt
+	cat residuals.csv \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  > $(OUTPUT)/residuals.txt
+	cat bundleout_images.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  > $(OUTPUT)/bundleout_images.txt
+	$(RM) bundleout_images.csv > /dev/null;
+	$(MV) bundleout_points.csv $(OUTPUT)/bundleout_points.txt > /dev/null;
+	$(RM) $(OUTPUT)/cube.lis > /dev/null;
+	$(RM) bundleout.txt > /dev/null;
+	$(RM) case01OutLog.txt > /dev/null;
+	$(RM) residuals.csv  > /dev/null;
+	cathist from=$(OUTPUT)/PSP_002733_1880_RED4.crop.cub > $(OUTPUT)/PSP4.pvl;				    
 	cathist from=$(OUTPUT)/PSP_002733_1880_RED5.crop.cub > $(OUTPUT)/PSP5.pvl;
