Added IGNORELINES to Makefiles
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2320 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/copylabel/tsts/diffSize/Makefile
+++ b/isis/src/base/apps/copylabel/tsts/diffSize/Makefile
@@ -5,8 +5,9 @@
 # The only things not copied back in would be Mapping and Radiometry which didn't
 # exist in the first place. So, labels, and blobs.
 
-
 APPNAME = copylabel
+
+reducedStripped.pvl.IGNORELINES = Bytes
 
 include $(ISISROOT)/make/isismake.tsts
 
