--- a/isis/src/base/apps/stats/tsts/format/Makefile
+++ b/isis/src/base/apps/stats/tsts/format/Makefile
@@ -5,5 +5,8 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/isisTruth.cub \
 	to=$(OUTPUT)/tmp.txt format=flat > /dev/null;
-	sed -e 's:/[^,]*isisTruth.cub:PATH:g' $(OUTPUT)/tmp.txt > $(OUTPUT)/stats.txt;
+	cat $(OUTPUT)/tmp.txt | \
+	  sed 's/\/[^,]*isisTruth.cub/PATH/g' | \
+	  sed 's/\([0-9]*\.[0-9]\{13\}\)[0-9]*/\1/g' \
+	  > $(OUTPUT)/stats.txt;
 	$(RM) $(OUTPUT)/tmp.txt;
