Add darkanalysis app test; update pxlbinnonzero
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2326 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdiscal/tsts/pxlbinnonzero/Makefile
+++ b/isis/src/messenger/apps/mdiscal/tsts/pxlbinnonzero/Makefile
@@ -1,6 +1,7 @@
 APPNAME = mdiscal
 
 nonZeroPxlBin.cub.TOLERANCE = 0.00000000001
+nonZeroPxlBin.pvl.IGNORELINES = ProcessDate
 
 include $(ISISROOT)/make/isismake.tsts
 
