Removed  From, added ValidDarkColumns keywords in the RadiometricCalibration group; updated darkanalysis app test
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2330 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdiscal/tsts/darkanalysis/Makefile
+++ b/isis/src/messenger/apps/mdiscal/tsts/darkanalysis/Makefile
@@ -1,7 +1,7 @@
 APPNAME = mdiscal
 
 darkanalysis.cub.TOLERANCE = 0.00000000001
-darkanalysis.pvl.IGNORELINES = ProcessDate
+darkanalysis.pvl.IGNORELINES = ProcessDate Bytes
 
 include $(ISISROOT)/make/isismake.tsts
 
