Refine cube tolerance, hack off some digits in output label leaving 10 digits precision
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2334 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdiscal/tsts/darkanalysis/Makefile
+++ b/isis/src/messenger/apps/mdiscal/tsts/darkanalysis/Makefile
@@ -1,6 +1,6 @@
 APPNAME = mdiscal
 
-darkanalysis.cub.TOLERANCE = 0.00000000001
+darkanalysis.cub.TOLERANCE = 0.000001
 darkanalysis.pvl.IGNORELINES = ProcessDate Bytes
 
 include $(ISISROOT)/make/isismake.tsts
@@ -11,4 +11,6 @@ commands:
 	TO=$(OUTPUT)/darkanalysis.cub \
 	> /dev/null;
 
-	catlab FROM=$(OUTPUT)/darkanalysis.cub > $(OUTPUT)/darkanalysis.pvl
+	catlab FROM=$(OUTPUT)/darkanalysis.cub \
+	   | sed 's/\([0-9][0-9]*\.[0-9]\{10\}\)\([0-9][0-9]*\)/\1/g' \
+	   > $(OUTPUT)/darkanalysis.pvl
