--- a/isis/src/base/apps/autoregtemplate/tsts/errors/Makefile
+++ b/isis/src/base/apps/autoregtemplate/tsts/errors/Makefile
@@ -5,7 +5,7 @@ APPNAME = autoregtemplate
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaxCor \
 	  tolerance=0.7  \
@@ -13,7 +13,7 @@ commands:
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -22,7 +22,7 @@ commands:
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -31,7 +31,7 @@ commands:
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -41,7 +41,7 @@ commands:
 	  pline=15 \
 	  ssamp=31 \
 	  sline=31 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -50,7 +50,7 @@ commands:
 	  pline=15 \
 	  ssamp=3 \
 	  sline=3 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -60,7 +60,7 @@ commands:
 	  pline=15 \
 	  ssamp=17 \
 	  sline=16 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -69,7 +69,7 @@ commands:
 	  ssamp=31 \
 	  sline=31 \
 	  minimumz=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -78,7 +78,7 @@ commands:
 	  ssamp=31 \
 	  sline=31 \
 	  pvalidpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -87,7 +87,7 @@ commands:
 	  ssamp=31 \
 	  sline=31 \
 	  ssubchipvalidpercent=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -97,7 +97,7 @@ commands:
 	  sline=31 \
 	  subpixel=true \
 	  dist=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -107,7 +107,7 @@ commands:
 	  sline=31 \
 	  subpixel=true \
 	  window=2 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -117,7 +117,7 @@ commands:
 	  sline=31 \
 	  subpixel=true \
 	  window=4 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
@@ -128,7 +128,7 @@ commands:
 	  subpixel=true \
 	  eccentricitytest=true \
 	  eccentricityratio=0 2>> $(OUTPUT)/error.txt > /dev/null;
-	$(APPNAME) -preference=$(ISISROOT)/src/base/objs/Preference/TestPreferences \
+	$(APPNAME) \
 	  to=$(OUTPUT)/autoregtemplateTruth.txt \
 	  algorithm=MaximumCorrelation \
 	  tolerance=0.7  \
