updated to make consistent with csv comparer and updated truth data to match changes to BundleAdjust
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2495 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/jigsaw/tsts/case01/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/case01/Makefile
@@ -22,24 +22,22 @@ commands:
 	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
 	  > $(OUTPUT)/bundleout.txt
 	# The above command uses sed to do the following (in order):
-	# 1. remove net filename paths
-	# 2. remove cube filename paths
+	# 1. remove cube filename paths
+	# 2. remove net filename paths
 	# 3. remove digits beyond the fifth decimal place of decimal numbers
 	# 4. remove date and time
 	cat case01OutLog.txt \
 	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
 	  > $(OUTPUT)/case01OutLog.txt
 	cat residuals.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g'\
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
-	  > $(OUTPUT)/residuals.txt
+	  > $(OUTPUT)/residuals.csv
 	cat bundleout_images.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
-	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
-	  > $(OUTPUT)/bundleout_images.txt
+	  > $(OUTPUT)/bundleout_images.csv
 	$(RM) bundleout_images.csv > /dev/null;
-	$(MV) bundleout_points.csv $(OUTPUT)/bundleout_points.txt > /dev/null;
+	$(MV) bundleout_points.csv $(OUTPUT)/bundleout_points.csv > /dev/null;
 	$(RM) $(OUTPUT)/cube.lis > /dev/null;
 	$(RM) bundleout.txt > /dev/null;
 	$(RM) case01OutLog.txt > /dev/null;
-	$(RM) residuals.csv  > /dev/null;
+#	$(RM) residuals.csv  > /dev/null;
 	cathist from=$(OUTPUT)/PSP_002733_1880_RED4.crop.cub > $(OUTPUT)/PSP4.pvl;				    
 	cathist from=$(OUTPUT)/PSP_002733_1880_RED5.crop.cub > $(OUTPUT)/PSP5.pvl;
