Tests now remove temporary cubes from output directories as they are not used in comparison with truth data.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2538 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cubefunc/tsts/sin/Makefile
+++ b/isis/src/base/apps/cubefunc/tsts/sin/Makefile
@@ -10,7 +10,8 @@ commands:
 	sinc=1 \
 	nlines=13  \
 	line=1 \
-	linc=1  > /dev/null;
+	linc=1  > /dev/null; \
 	$(APPNAME) from=$(OUTPUT)/tempCrop.cub \
 	  to=$(OUTPUT)/cubefuncTruth2.cub \
-	  function=sin > /dev/null;
+	  function=sin > /dev/null; \
+	$(RM) $(OUTPUT)/tempCrop.cub;
