Tests now remove temporary cubes from output directories as they are not used in comparison with truth data.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2539 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/cubenorm/tsts/avgFalse/Makefile
+++ b/isis/src/base/apps/cubenorm/tsts/avgFalse/Makefile
@@ -10,8 +10,9 @@ commands:
 	  sinc = 1 \
 	  line = 8 \
 	  nlines = 6 \
-	  linc = 1 > /dev/null;
+	  linc = 1 > /dev/null; \
 	$(APPNAME) from= $(OUTPUT)/cropTemp.cub \
 	  to=$(OUTPUT)/cubenormTruth2.cub \
 	  normalizer = average \
-	  preserve = false > /dev/null;
+	  preserve = false > /dev/null; \
+	$(RM) $(OUTPUT)/cropTemp.cub;
