--- a/isis/src/base/apps/editlab/tsts/modkey/Makefile
+++ b/isis/src/base/apps/editlab/tsts/modkey/Makefile
@@ -8,10 +8,12 @@ commands:
 	  to=$(OUTPUT)/tempCube.cub \
 	  samples=1 \
 	  lines=13 \
-	  bands=13 > /dev/null;
-	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addg grpname=NewGroup ;
-	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addkey grpname=NewGroup keyword=Key1 value=null ;
-	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addkey grpname=NewGroup keyword=Key2 value=value ;
-	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=modkey grpname=NewGroup keyword=Key2 value=value units=meters;
-	catlab from=$(OUTPUT)/tempCube.cub >& $(OUTPUT)/tempLab1.txt;
-	head -n 31 $(OUTPUT)/tempLab1.txt > $(OUTPUT)/editlabTruth1.txt;
+	  bands=13 > /dev/null; \
+	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addg grpname=NewGroup; \
+	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addkey grpname=NewGroup keyword=Key1 value=null; \
+	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=addkey grpname=NewGroup keyword=Key2 value=value; \
+	$(APPNAME) from=$(OUTPUT)/tempCube.cub option=modkey grpname=NewGroup keyword=Key2 value=value units=meters; \
+	catlab from=$(OUTPUT)/tempCube.cub >& $(OUTPUT)/tempLab1.txt; \
+	head -n 31 $(OUTPUT)/tempLab1.txt > $(OUTPUT)/editlabTruth1.txt; \
+	$(RM) $(OUTPUT)/tempCube.cub; \
+	$(RM) $(OUTPUT)/tempLab1.txt;
