Fixed typos in tests that prevented temporary files from being removed from the output directory.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2543 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/isis2fits/tsts/default/Makefile
+++ b/isis/src/base/apps/isis2fits/tsts/default/Makefile
@@ -4,9 +4,9 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/isisTruth.cub+1 \
-	  to=$(OUTPUT)/isis2fitsTruth1.fits > /dev/null;
+	  to=$(OUTPUT)/isis2fitsTruth1.fits > /dev/null; \
 	raw2isis from=$(OUTPUT)/isis2fitsTruth1.fits \
 	  to=$(OUTPUT)/isis2fitsTruth1.cub BITTYPE=REAL SAMPLES=126 \
-	  LINES=126 BANDS=1 SKIP=2880 BYTEORDER=MSB > /dev/null;
-	dd bs=2880 count=1 if=$(OUTPUT)/isis2fitsTruth1.fits > $(OUTPUT)/labels.txt 2> /dev/null;
-	$(RM) $(OUTPUT)/isis2fitsR\Truth1.fits; > /dev/null;
+	  LINES=126 BANDS=1 SKIP=2880 BYTEORDER=MSB > /dev/null; \
+	dd bs=2880 count=1 if=$(OUTPUT)/isis2fitsTruth1.fits > $(OUTPUT)/labels.txt 2> /dev/null; \
+	$(RM) $(OUTPUT)/isis2fitsTruth1.fits; > /dev/null;
