Added option RETAIN_REFERENCE
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2554 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetedit/tsts/checkValid/Makefile
+++ b/isis/src/control/apps/cnetedit/tsts/checkValid/Makefile
@@ -9,5 +9,6 @@ commands:
 	LOG=$(OUTPUT)/log.txt \
 	CHECKVALID=yes \
        	FROMLIST=$(OUTPUT)/list.lis \
-	DEFFILE=$(INPUT)/deffile.def > /dev/null;
+	DEFFILE=$(INPUT)/deffile.def \
+	RETAIN_REFERENCE=yes > /dev/null;
 	$(RM) $(OUTPUT)/list.lis;
