--- a/isis/src/control/apps/deltack/tsts/singlePoint/Makefile
+++ b/isis/src/control/apps/deltack/tsts/singlePoint/Makefile
@@ -6,11 +6,27 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(CP) $(INPUT)/*.cub $(OUTPUT)
 	$(APPNAME) from=$(OUTPUT)/I20042001RDR_driftcosi.cub \
-	maxits=20 \
-	tol=0.5 \
 	twist=false \
+	maxit=4 \
 	samp1=21. \
 	line1=1177. \
 	lat1=32.53 \
 	lon1=79.72 > /dev/null;
+	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
+	  | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
+	  > $(OUTPUT)/bundleout.txt
+	# The above command uses sed to do the following (in order):
+	# 1. remove cube filename paths
+	# 2. remove digits beyond the fifth decimal place of decimal numbers
+	# 3. remove date and time
+	cat residuals.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g'\
+	  > $(OUTPUT)/residuals.csv
+	cat bundleout_images.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  > $(OUTPUT)/bundleout_images.csv
+	$(RM) bundleout_images.csv > /dev/null;
+	$(MV) bundleout_points.csv $(OUTPUT)/bundleout_points.csv > /dev/null;
+	$(RM) bundleout.txt > /dev/null;
+	$(RM) residuals.csv  > /dev/null;
 	$(RM) print.prt < /dev/null;
