updated to work with current software
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2594 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/deltack/tsts/twist/Makefile
+++ b/isis/src/control/apps/deltack/tsts/twist/Makefile
@@ -1,5 +1,6 @@
 APPNAME = deltack
 #This file tests the twist (2-point) option
+#	tol=0.4194172 \
 
 include $(ISISROOT)/make/isismake.tsts
 
@@ -7,7 +8,6 @@ commands:
 	$(CP) $(INPUT)/*.cub $(OUTPUT)
 	$(APPNAME) from=$(OUTPUT)/I08526015RDR_band9.cub \
 	maxits=25 \
-	tol=0.4194172 \
 	twist=true \
 	samp1=58.5 \
 	line1=11603. \
@@ -17,4 +17,21 @@ commands:
 	line2=8044.75 \
 	lat2=-0.3270664209085 \
 	lon2=355.70986410595 > /dev/null;
+	cat bundleout.txt  | grep -v "Run Time:" | grep -v "Elapsed Time:" \
+	  | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  | sed 's/\([0-9][0-9]*\.[0-9][0-9][0-9][0-9][0-9]\)\([0-9][0-9]*\)/\1/g' \
+	  | sed s/`date +%Y-%m-%dT`\[0-2\]\[0-9\]:\[0-5\]\[0-9\]:\[0-5\]\[0-9\]/date/ \
+	  > $(OUTPUT)/bundleout.txt
+	# The above command uses sed to do the following (in order):
+	# 1. remove cube filename paths
+	# 2. remove digits beyond the fifth decimal place of decimal numbers
+	# 3. remove date and time
+	cat residuals.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g'\
+	  > $(OUTPUT)/residuals.csv
+	cat bundleout_images.csv | sed 's/\/[^,]*\/\([^,\/]*\.cub\)/\1/g' \
+	  > $(OUTPUT)/bundleout_images.csv
+	$(RM) bundleout_images.csv > /dev/null;
+	$(MV) bundleout_points.csv $(OUTPUT)/bundleout_points.csv > /dev/null;
+	$(RM) bundleout.txt > /dev/null;
+	$(RM) residuals.csv  > /dev/null;
 	$(RM) print.prt < /dev/null;
