changed ControlPoint point types Ground to Fixed and Tie to Free
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2600 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/jigsaw/tsts/case01/Makefile
+++ b/isis/src/control/apps/jigsaw/tsts/case01/Makefile
@@ -38,6 +38,6 @@ commands:
 	$(RM) $(OUTPUT)/cube.lis > /dev/null;
 	$(RM) bundleout.txt > /dev/null;
 	$(RM) case01OutLog.txt > /dev/null;
-#	$(RM) residuals.csv  > /dev/null;
+	$(RM) residuals.csv  > /dev/null;
 	cathist from=$(OUTPUT)/PSP_002733_1880_RED4.crop.cub > $(OUTPUT)/PSP4.pvl;				    
 	cathist from=$(OUTPUT)/PSP_002733_1880_RED5.crop.cub > $(OUTPUT)/PSP5.pvl;
