Added more IGNORELINES to tests.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2601 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/editlab/tsts/modkey/Makefile
+++ b/isis/src/base/apps/editlab/tsts/modkey/Makefile
@@ -1,5 +1,5 @@
 APPNAME = editlab
-editlabTruth1.txt.IGNORELINES=ByteOrder
+editlabTruth1.txt.IGNORELINES = ByteOrder TileSamples TileLines StartByte
 
 include $(ISISROOT)/make/isismake.tsts
 
