--- a/isis/src/base/apps/editlab/tsts/delg/Makefile
+++ b/isis/src/base/apps/editlab/tsts/delg/Makefile
@@ -1,5 +1,5 @@
 APPNAME = editlab
-editlabTruth3.txt.IGNORELINES=ByteOrder
+editlabTruth3.txt.IGNORELINES = ByteOrder TileSamples TileLines StartByte
 
 include $(ISISROOT)/make/isismake.tsts
 
