--- a/isis/src/base/apps/demprep/tsts/prepspole/Makefile
+++ b/isis/src/base/apps/demprep/tsts/prepspole/Makefile
@@ -1,6 +1,6 @@
 APPNAME = demprep
 
-labels.txt.IGNORELINES = Bytes StartByte ByteOrder
+labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
