Tests now ignore tile samples, tile lines, and start byte.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2615 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/map2map/tsts/projection/Makefile
+++ b/isis/src/base/apps/map2map/tsts/projection/Makefile
@@ -1,6 +1,6 @@
 APPNAME = map2map
 
-labels.txt.IGNORELINES = Bytes ByteOrder
+labels.txt.IGNORELINES = Bytes ByteOrder StartByte TileSamples TileLines
 # This tolerance is so high because it's ObliqueCylindrical and
 #   the interpolation causes pixel differences.
 map2mapTruth.cub.TOLERANCE = 0.000001
