--- a/isis/src/base/apps/pds2isis/tsts/default/Makefile
+++ b/isis/src/base/apps/pds2isis/tsts/default/Makefile
@@ -1,6 +1,6 @@
 APPNAME = pds2isis
 
-labels.txt.IGNORELINES = Bytes StartByte ByteOrder
+labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
