Test now ignores tile samples and tile lines.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2617 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/reduce/tsts/averageOn/Makefile
+++ b/isis/src/base/apps/reduce/tsts/averageOn/Makefile
@@ -1,7 +1,7 @@
 APPNAME = reduce
 
-labels3.txt.IGNORELINES = ByteOrder StartByte Bytes
-labels6.txt.IGNORELINES = ByteOrder StartByte Bytes
+labels3.txt.IGNORELINES = ByteOrder StartByte Bytes TileSamples TileLines
+labels6.txt.IGNORELINES = ByteOrder StartByte Bytes TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
