Tests now ignore tile samples and tile lines.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2618 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/cassini/apps/ciss2isis/tsts/narrowAngle/Makefile
+++ b/isis/src/cassini/apps/ciss2isis/tsts/narrowAngle/Makefile
@@ -1,6 +1,6 @@
 APPNAME = ciss2isis
 
-labels.txt.IGNORELINES = Bytes StartByte
+labels.txt.IGNORELINES = Bytes StartByte TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
