Test now ignores tile samples and tile lines.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2619 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/clementine/apps/clem2isis/tsts/default/Makefile
+++ b/isis/src/clementine/apps/clem2isis/tsts/default/Makefile
@@ -1,7 +1,7 @@
 APPNAME = clem2isis
 
-nirLabels.txt.IGNORELINES = Bytes StartByte ByteOrder
-uvvisLabels.txt.IGNORELINES = Bytes StartByte ByteOrder
+nirLabels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
+uvvisLabels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
