Tests now ignore tile samples and tile lines.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2621 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/dawn/apps/dawnvir2isis/tsts/IR/Makefile
+++ b/isis/src/dawn/apps/dawnvir2isis/tsts/IR/Makefile
@@ -1,6 +1,6 @@
 APPNAME = dawnvir2isis
 
-labels.txt.IGNORELINES = Bytes StartByte ByteOrder
+labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
