--- a/isis/src/dawn/apps/dawnvir2isis/tsts/VIS/Makefile
+++ b/isis/src/dawn/apps/dawnvir2isis/tsts/VIS/Makefile
@@ -1,6 +1,6 @@
 APPNAME = dawnvir2isis
 
-labels.txt.IGNORELINES = Bytes StartByte ByteOrder
+labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
