Tests now ignore tile samples and tile lines.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2622 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/galileo/apps/gllssi2isis/tsts/case04/Makefile
+++ b/isis/src/galileo/apps/gllssi2isis/tsts/case04/Makefile
@@ -1,6 +1,6 @@
 APPNAME = gllssi2isis
 
-7500r.txt.IGNORELINES = Bytes StartByte ByteOrder
+7500r.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
