--- a/isis/src/galileo/apps/gllssi2isis/tsts/go_0022_I24_IO_repairedImage/Makefile
+++ b/isis/src/galileo/apps/gllssi2isis/tsts/go_0022_I24_IO_repairedImage/Makefile
@@ -1,6 +1,6 @@
 APPNAME = gllssi2isis
 
-labels.txt.IGNORELINES = Bytes StartByte ByteOrder
+labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
