--- a/isis/src/kaguya/apps/kaguyatc2isis/tsts/default/Makefile
+++ b/isis/src/kaguya/apps/kaguyatc2isis/tsts/default/Makefile
@@ -1,6 +1,6 @@
 APPNAME = kaguyatc2isis
 
-labels.txt.IGNORELINES = Bytes StartByte ByteOrder
+labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
