--- a/isis/src/galileo/apps/gllssi2isis/tsts/case03/Makefile
+++ b/isis/src/galileo/apps/gllssi2isis/tsts/case03/Makefile
@@ -1,6 +1,6 @@
 APPNAME = gllssi2isis
 
-labels.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
+3700R.txt.IGNORELINES = Bytes StartByte ByteOrder TileSamples TileLines
 
 include $(ISISROOT)/make/isismake.tsts
 
