Removed local copy of Kernels class using system version; update keyword translation to propagate ORBIT_NUMBER to output DDR file
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2642 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdisddr/tsts/NAC/Makefile
+++ b/isis/src/messenger/apps/mdisddr/tsts/NAC/Makefile
@@ -2,6 +2,7 @@ APPNAME = mdisddr
 
 output.cub.TOLERANCE = 0.0000002
 output.pvl.IGNORELINES = PRODUCT_CREATION_TIME
+#NOPREFERENCES=
 
 include $(ISISROOT)/make/isismake.tsts
 
