The documentation should now build
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@2693 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Application/Makefile
+++ b/isis/src/docsys/Application/Makefile
@@ -35,7 +35,7 @@ docs: documentation toccat tocoldvnew tocalph categories
 documentation:
 	echo "      Creating Documentation"
 	mkdir -p $(ISISROOT)/doc/Application
-	cd data ; make docs ; cd .. ;
+	cd data ; $(MAKE) docs ; cd .. ;
 
 
 #---------------
