--- a/isis/src/docsys/Object/Makefile
+++ b/isis/src/docsys/Object/Makefile
@@ -25,7 +25,9 @@ help:
 	echo "make clean     : Clean up Source Area (docsys/Object)" 
 
 
-docs: documentation assetsDir conf render
+docs: conf assetsDir 
+	$(MAKE) documentation
+	$(MAKE) render
 
 documentation: 
 	echo "      Creating Object Documentation"
@@ -33,6 +35,7 @@ documentation:
 	mkdir -p $(ISISROOT)/doc/Object/apps
 	mkdir -p $(ISISROOT)/doc/Object/Developer
 	mkdir -p $(ISISROOT)/doc/Object/Programmer
+	mkdir -p $(ISISROOT)/doc/documents/DocStyle/assets
 #dls 2006-10-04 -- took out -d on rsync that i'd added to make Sun happy
 # (Sun = hipeaks)... Linux (orkin) was complaining
 	rsync -qlHptr --delete --rsh=ssh *.html $(ISISROOT)/doc/Object/
